# xvega

./: .gitignore  CMakeLists.txt  LICENSE  README.md  demo.ipynb  environment-dev.yml  environment.yml  postBuild  xvegaConfig.cmake.in
.github/workflows/: build.yml
include/xvega/: xvega.hpp  xvega_config.hpp  xvega_config_cling.hpp.in
include/xvega/base/: xvega-base.hpp
include/xvega/functions/: populate_config.hpp  populate_data.hpp  populate_encodings.hpp  populate_marks.hpp  populate_selections.hpp  populate_transformations.hpp
include/xvega/grammar/: chart.hpp  config.hpp  encodings.hpp  marks.hpp  selections.hpp  title.hpp  transformations.hpp  view_compositions.hpp
include/xvega/grammar/config/: area_config.hpp  auto_size_params.hpp  axis_config.hpp  bar_config.hpp  base_config.hpp  box_plot_config.hpp  composition_config.hpp  error_band_config.hpp  error_bar_config.hpp  header_config.hpp  legend_config.hpp  line_config.hpp  mark_config.hpp  overlay_mark_def.hpp  projection_config.hpp  range_config.hpp  rect_config.hpp  scale_config.hpp  selection_config.hpp  style_config_index.hpp  tick_config.hpp  title_config.hpp  view_config.hpp
include/xvega/grammar/data/: data_format.hpp
include/xvega/grammar/data/data_format/: csv_data_format.hpp  dsv_data_format.hpp  json_data_format.hpp  topo_data_format.hpp  tsv_data_format.hpp
include/xvega/grammar/data/data_source/: inline_data.hpp  named_data.hpp  url_data.hpp
include/xvega/grammar/data/generator/: graticule_generator.hpp  sequence_generator.hpp  sphere_generator.hpp
include/xvega/grammar/encodings/encoding-channel-options/: aggregate.hpp  axis.hpp  bin.hpp  condition.hpp  datetime.hpp  datum.hpp  field.hpp  header.hpp  impute.hpp  legend.hpp  repeatRef.hpp  scale.hpp  sort.hpp  stack.hpp  timeunit.hpp  value.hpp
include/xvega/grammar/marks/: mark_arc.hpp  mark_area.hpp  mark_bar.hpp  mark_circle.hpp  mark_geoshape.hpp  mark_image.hpp  mark_line.hpp  mark_point.hpp  mark_rect.hpp  mark_rule.hpp  mark_square.hpp  mark_text.hpp  mark_tick.hpp  mark_trail.hpp
include/xvega/grammar/selections/: selection_interval.hpp  selection_mark.hpp  selection_multi.hpp  selection_single.hpp
include/xvega/grammar/selections/bindings/: bind_checkbox.hpp  bind_input.hpp  bind_radio_select.hpp  bind_range.hpp  legend_stream_binding.hpp
include/xvega/grammar/selections/streams/: derived_stream.hpp  event_stream.hpp  merged_stream.hpp
include/xvega/grammar/transformations/: transform_aggregate.hpp  transform_bin.hpp  transform_calculate.hpp  transform_density.hpp  transform_flatten.hpp  transform_fold.hpp  transform_impute.hpp  transform_join_aggregate.hpp  transform_loess.hpp  transform_lookup.hpp  transform_pivot.hpp  transform_quantile.hpp  transform_regression.hpp  transform_sample.hpp  transform_stack.hpp  transform_timeunit.hpp  transform_window.hpp
include/xvega/grammar/view_compositions/: hconcat.hpp  layering.hpp  vconcat.hpp
include/xvega/utils/: any_serializable.hpp  custom_datatypes.hpp  random_string.hpp  serialize.hpp  xany.hpp  xeither.hpp  xjson.hpp  xmaterialize.hpp
notebooks/: demo.ipynb
src/base/: xvega-base.cpp
src/functions/: populate_config.cpp  populate_data.cpp  populate_encodings.cpp  populate_marks.cpp  populate_selections.cpp  populate_transformations.cpp
src/grammar/: chart.cpp  config.cpp  encodings.cpp  marks_private.hpp  selections_private.hpp  title.cpp  view_compositions.cpp
src/grammar/config/: area_config.cpp  auto_size_params.cpp  axis_config.cpp  bar_config.cpp  base_config_private.hpp  box_plot_config.cpp  composition_config.cpp  error_band_config.cpp  error_bar_config.cpp  header_config.cpp  legend_config.cpp  line_config.cpp  mark_config.cpp  overlay_mark_def.cpp  projection_config.cpp  range_config.cpp  rect_config.cpp  scale_config.cpp  selection_config.cpp  style_config_index.cpp  tick_config.cpp  title_config.cpp  view_config.cpp
src/grammar/data/: data_format_private.hpp
src/grammar/data/data_format/: csv_data_format.cpp  dsv_data_format.cpp  json_data_format.cpp  topo_data_format.cpp  tsv_data_format.cpp
src/grammar/data/data_source/: inline_data.cpp  named_data.cpp  url_data.cpp
src/grammar/data/generator/: graticule_generator.cpp  sequence_generator.cpp  sphere_generator.cpp
src/grammar/encodings/encoding-channel-options/: aggregate.cpp  axis.cpp  bin.cpp  condition.cpp  datetime.cpp  header.cpp  impute.cpp  legend.cpp  repeatRef.cpp  scale.cpp  sort.cpp  timeunit.cpp  value.cpp
src/grammar/encodings/encoding-channels/detail-channel/: detail.cpp
src/grammar/encodings/encoding-channels/facet-channels/: column.cpp  facet.cpp  row.cpp
src/grammar/marks/: mark_arc.cpp  mark_area.cpp  mark_bar.cpp  mark_circle.cpp  mark_geoshape.cpp  mark_image.cpp  mark_line.cpp  mark_point.cpp  mark_rect.cpp  mark_rule.cpp  mark_square.cpp  mark_text.cpp  mark_tick.cpp  mark_trail.cpp
src/grammar/selections/: selection_interval.cpp  selection_mark.cpp  selection_multi.cpp  selection_single.cpp
src/grammar/selections/bindings/: bind_checkbox.cpp  bind_input.cpp  bind_radio_select.cpp  bind_range.cpp  legend_stream_binding.cpp
src/grammar/selections/streams/: derived_stream.cpp  event_stream.cpp  merged_stream.cpp
src/grammar/transformations/: transform_aggregate.cpp  transform_bin.cpp  transform_calculate.cpp  transform_density.cpp  transform_flatten.cpp  transform_fold.cpp  transform_impute.cpp  transform_join_aggregate.cpp  transform_loess.cpp  transform_lookup.cpp  transform_pivot.cpp  transform_quantile.cpp  transform_regression.cpp  transform_sample.cpp  transform_stack.cpp  transform_timeunit.cpp  transform_window.cpp
src/grammar/view_compositions/: hconcat.cpp  layering.cpp  vconcat.cpp
src/utils/: custom_datatypes.cpp  random_string.cpp  serialize.hpp  xjson.hpp
test/: CMakeLists.txt  copyGTest.cmake.in  downloadGTest.cmake.in  main.cpp  set_compiler_flag.cmake  test_basic_chart.cpp  test_configurations.cpp  test_data.cpp  test_encodings.cpp  test_marks.cpp  test_selections.cpp  test_transformations.cpp  test_view_compositions.cpp
(+58 files in other folders)
